Fix viewport on mobile

--- a/src/components/Menu/styles/aside.less
+++ b/src/components/Menu/styles/aside.less
@@ -79,7 +79,7 @@
   :global(.ant-layout-sider-children) {
     position: relative;
     width: 100%;
-    height: calc(100vh - 88px);
+    height: calc(var(--vh) * 100 - 88px);
     padding-top: 8px;
     padding-right: 1px;
     :global(.menu-sider-wrapper) {
