--- a/src/features/how-to/components/HowTo/index.less
+++ b/src/features/how-to/components/HowTo/index.less
@@ -30,7 +30,7 @@
     display: none;
   }
   .form {
-    height: calc(100vh - 96px);
+    height: calc(var(--vh) * 100 - 96px);
     padding: 0 16px;
     overflow: auto;
     background-color: #fff;
