--- a/src/features/how-to/components/HowToAdministration/HowToEntryForm.less
+++ b/src/features/how-to/components/HowToAdministration/HowToEntryForm.less
@@ -1,7 +1,7 @@
 .main_container {
   margin-top: 8px;
   .collapse_container {
-    height: calc(100vh - 240px);
+    height: calc(var(--vh) * 100 - 240px);
     padding: 16px;
     overflow: hidden auto;
     background: #fff;
