--- a/src/features/user-group/styles/index.less
+++ b/src/features/user-group/styles/index.less
@@ -41,7 +41,7 @@
   }
 
   .form {
-    height: calc(100vh - 248px);
+    height: calc(var(--vh) * 100 - 248px);
     padding: 16px;
     overflow: hidden auto;
     background: #fff;
