--- a/src/pages/Designer/CustomResource/CustomResource.less
+++ b/src/pages/Designer/CustomResource/CustomResource.less
@@ -70,7 +70,7 @@
 }
 
 .information {
-  height: calc(100vh - 304px);
+  height: calc(var(--vh) * 100 - 304px);
   padding: 16px;
   overflow: auto;
   :global(.ant-collapse > .ant-collapse-item.ant-collapse-no-arrow > .ant-collapse-header) {
