--- a/src/pages/LandingPage/index.less
+++ b/src/pages/LandingPage/index.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: calc(var(--vh) * 100);
   .container {
     display: flex;
     flex: 1;
